--- a/main.css
+++ b/main.css
@@ -255,13 +255,13 @@ ul.dropdown li ul{
 	background-position:center;
 }
 .tips-pic{
-	background-image:url(/images/tipsntalk/gelt-cake.jpg); 
+	background-image:url(/images/tipsntalk/quickpopmaker.png); 
 	background-size:cover;
 	background-position:center;
 	border:solid thin #382f17;
 }
 .specials-pic{
-	background-image:url(/images/slideshowNew/BIG-SALE.jpg); 
+	background-image:url(/images/upload/375xshinepukur-superior-compote-and-bread.jpg); 
 	background-size:cover;
 	background-position:center;
 	border:solid thin #382f17;
